//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  uid String [unique]
  firstName String
  lastName String
  email String [unique, not null]
  role UserRole [not null, default: 'USER']
  status UserStatus [not null, default: 'PENDING']
  avatarId String
  invitationKey String [unique]
  createdAt DateTime [default: `now()`, not null]
  disabledAt DateTime
  posts Post [not null]
  likes Likes [not null]
}

Table AuditLog {
  id Int [pk, increment]
  userEmail String [not null]
  operation String [not null]
  timestamp DateTime [not null]
  userIp String
  accessLevel String [not null]
  originalUserId String
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  content String [not null]
  author User
  userId String
  Likes Likes [not null]
}

Table Likes {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
  userId String
  post Post
  postId String
}

Enum UserRole {
  USER
  ADMIN
}

Enum UserStatus {
  ACTIVE
  PENDING
  BANNED
  REJECTED
}

Ref: Post.userId > User.id

Ref: Likes.userId > User.id

Ref: Likes.postId > Post.id